--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -1,10 +1,74 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	LIB2024- QA
 </head>
 <body>
+<p>1)  What are the three components of Web? Answer A webbrowser (or client), a web application server, and a database server</p>
 
+<p> 2)  Define version control and give one example. Answer keeping a software system consisting of many versions and configurations well organized, eg SVN.</p>
+
+<p> 3)  What tag is used to create the title of a web page? Give an example. Answer<title><b>QA for LIB2024<b/></title> </p> 
+
+<p> 4)  What tag is used to create a paragraph in html? Give an example.Answer<p>
+<li> <p><b>Coming Soon:</b> <a href="https://fonts.google.com/specimen/Coming+Soon" title="https://fonts.google.com/specimen/Coming+Soon">https://fonts.google.com/specimen/Coming+Soon <a/></p></li></a> </p>
+
+<p> 5)  Identify the odd one from these tags: <span>, <p>, <a>, <i>  and state the reason? Answer<span/></p> 
+
+
+<p> 6)  What are the tags required to create a navigation list in HTML? Answer<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Clients</a></li>
+    <li><a href="#">Contact Us</a></li>
+  </ul>
+</nav></p>
+
+<p> 7)  What element is used to create images? Name its attributes. Answer <img> </p>
+
+<p> 8)  Identify the odd one from these tags: <table>, <tr>, <b>, <td>  and state the reason Answer<td>  this tag is not used to make a table.</p>
+
+<p> 9)  Give an example of color picker input Answer <label for="favcolor">Select your favorite color:</label>
+<input type="color" id="favcolor" name="favcolor" value="#ff0000"> </p>
+
+<p> 10) What is the use of name and value attributes? Give two examples Answer Value = The value attribute specifies the value of an element. Name = name is only to post form data. 
+</p>
+
+<p> 11) Give an example of inline style. Answer <h1 style="color:blue;text-align:center;">This is a heading</h1>
+<p style="color:red;">This is a paragraph.</p>	
+</p>
+
+<p> 12) How would you link an external style sheet? Give example. Answer 
+
+/* myStyle.css */
+body {
+ background-color: #333300;
+ color: #FFFFFF;
+}
+h1 {
+ color: #FFFF33;
+ text-align: center;
+ font: italic 200% fantasy;
+}
+p {
+ background-color: #FFFF33;
+ color: #333300;
+ text-align: right;
+ border: 3px groove #FFFF33;
+}
+</p>
+
+<p> 19) Give an example of input field that takes phone number with format "123-456-7890"? Answer
+<label for="phone">Enter your phone number:</label>
+<input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+</p>
+
+<p> 20)  Among HTML, CSS, Javascript, JQuery, what language did you like the best? State the reason. Answer If I had to pick one it would be HTML, since it's the language that I understand the most. 
+</p>
+
+</body>
+
+  </ol>
 </body>
 </html>
